# opencode-rs

./: .gitignore  Cargo.toml  GAP.md  README.md  REMAINING_GAPS.md  TODO.md  TUI_GAPS.md  UI_CONSISTENCY_GAP.md  UI_UX_GAP.md  UI_VS_ORIGINAL.md
.opencode/: opencode.jsonc
src/: acp.rs  cli.rs  config.rs  global_paths.rs  log.rs  lsp.rs  main.rs  mcp.rs  mdns.rs  plugin.rs  reference.rs  server.rs  session.rs  session_store.rs  theme.rs  tui.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs
src/tools/: apply_patch.rs  bash.rs  edit.rs  glob_tool.rs  grep_tool.rs  mod.rs  question.rs  read.rs  skill.rs  task.rs  todowrite.rs  webfetch.rs  websearch.rs  write.rs
src/util/: filetype.rs  locale.rs  mod.rs  tool_display.rs
